Button alignment fixes.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,6 +8,10 @@
 	padding: 3px 118px 5px 27px;
 }
 
+.ask_me {
+  padding: 16px 174px 5px 27px !important;
+}
+
 .send-a-message-div {
 	padding: 3px 134px 5px 27px;
 }
@@ -41,6 +45,10 @@
 .message_div input.btn {
 	float: right;
 	margin: -73px -113px 5px 5px;
+}
+
+.ask_me input.btn {
+  margin: -54px -170px 5px 5px;
 }
 
 .message_div input.send-a-message {
